added social url

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <h1>Welcome to the Duratec Tappet Calculator</h1>
-        <h2>Hosted by Mountain Dog Rally Team</h2>
+        <h2>Hosted by <a href="https://www.instagram.com/mtndogrally/">Mountain Dog Rally Team</a></h2>
         <table class="table table-bordered table-sm">
             <thead>
               <tr>
