--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
         <script type="text/javascript" src="https://ajax.aspnetcdn.com/ajax/knockout/knockout-3.5.0.js"></script>
     </head>
     <body>
-        <h1>Welcome to the Duratec Tappet Calculator</h1>
-        <h2>Hosted by <a href="https://www.instagram.com/mtndogrally/">Mountain Dog Rally Team</a></h2>
+      <div class="p-5 text-center bg-light">
+        <h1 class="mb-3">Welcome to the Duratec Tappet Calculator</h1>
+        <h4 class="mb-3">Created by <a href="https://www.instagram.com/mtndogrally/">Mountain Dog Rally Team</a></h4>
+      </div>
         <table class="table table-bordered table-sm">
             <thead>
               <tr>
