Added new clearance calculation

--- a/index.html
+++ b/index.html
@@ -53,18 +53,7 @@
                 <td><input type="text" class="form-control" data-bind='value: exhaustTappet8'></input></td>
               </tr>
               <tr>
-                <th scope="row">Nearest Tappet Size</th>
-                <td><input type="text" class="form-control" data-bind='value: exhaustNewSize1' disabled="true"></input></td>
-                <td><input type="text" class="form-control" data-bind='value: exhaustNewSize2' disabled="true"></input></td>
-                <td><input type="text" class="form-control" data-bind='value: exhaustNewSize3' disabled="true"></input></td>
-                <td><input type="text" class="form-control" data-bind='value: exhaustNewSize4' disabled="true"></input></td>
-                <td><input type="text" class="form-control" data-bind='value: exhaustNewSize5' disabled="true"></input></td>
-                <td><input type="text" class="form-control" data-bind='value: exhaustNewSize6' disabled="true"></input></td>
-                <td><input type="text" class="form-control" data-bind='value: exhaustNewSize7' disabled="true"></input></td>
-                <td><input type="text" class="form-control" data-bind='value: exhaustNewSize8' disabled="true"></input></td>
-              </tr>
-              <tr>
-                <th scope="row">New Tappet #</th>
+                <th scope="row">Nearest Tappet #</th>
                 <td><input type="text" class="form-control" data-bind='value: exhaustNewTappet1' disabled="true"></input></td>
                 <td><input type="text" class="form-control" data-bind='value: exhaustNewTappet2' disabled="true"></input></td>
                 <td><input type="text" class="form-control" data-bind='value: exhaustNewTappet3' disabled="true"></input></td>
@@ -73,6 +62,17 @@
                 <td><input type="text" class="form-control" data-bind='value: exhaustNewTappet6' disabled="true"></input></td>
                 <td><input type="text" class="form-control" data-bind='value: exhaustNewTappet7' disabled="true"></input></td>
                 <td><input type="text" class="form-control" data-bind='value: exhaustNewTappet8' disabled="true"></input></td>
+              </tr>
+              <tr>
+                <th scope="row">New Tappet Size</th>
+                <td><input type="text" class="form-control" data-bind='value: exhaustNewSize1' disabled="true"></input></td>
+                <td><input type="text" class="form-control" data-bind='value: exhaustNewSize2' disabled="true"></input></td>
+                <td><input type="text" class="form-control" data-bind='value: exhaustNewSize3' disabled="true"></input></td>
+                <td><input type="text" class="form-control" data-bind='value: exhaustNewSize4' disabled="true"></input></td>
+                <td><input type="text" class="form-control" data-bind='value: exhaustNewSize5' disabled="true"></input></td>
+                <td><input type="text" class="form-control" data-bind='value: exhaustNewSize6' disabled="true"></input></td>
+                <td><input type="text" class="form-control" data-bind='value: exhaustNewSize7' disabled="true"></input></td>
+                <td><input type="text" class="form-control" data-bind='value: exhaustNewSize8' disabled="true"></input></td>
               </tr>
               <tr>
                 <th scope="row">New Tappet Part#</th>
@@ -84,6 +84,17 @@
                 <td><input type="text" class="form-control" data-bind='value: exhaustNewPart6' disabled="true"></input></td>
                 <td><input type="text" class="form-control" data-bind='value: exhaustNewPart7' disabled="true"></input></td>
                 <td><input type="text" class="form-control" data-bind='value: exhaustNewPart8' disabled="true"></input></td>
+              </tr>
+              <tr>
+                <th scope="row">New Clearance</th>
+                <td><input type="text" class="form-control" data-bind='value: exhaustNewClearance1' disabled="true"></input></td>
+                <td><input type="text" class="form-control" data-bind='value: exhaustNewClearance2' disabled="true"></input></td>
+                <td><input type="text" class="form-control" data-bind='value: exhaustNewClearance3' disabled="true"></input></td>
+                <td><input type="text" class="form-control" data-bind='value: exhaustNewClearance4' disabled="true"></input></td>
+                <td><input type="text" class="form-control" data-bind='value: exhaustNewClearance5' disabled="true"></input></td>
+                <td><input type="text" class="form-control" data-bind='value: exhaustNewClearance6' disabled="true"></input></td>
+                <td><input type="text" class="form-control" data-bind='value: exhaustNewClearance7' disabled="true"></input></td>
+                <td><input type="text" class="form-control" data-bind='value: exhaustNewClearance8' disabled="true"></input></td>
               </tr>
             </tbody>
           </table>
@@ -129,18 +140,7 @@
                 <td><input type="text" class="form-control" data-bind='value: intakeTappet8'></input></td>
               </tr>
               <tr>
-                <th scope="row">Nearest Tappet Size</th>
-                <td><input type="text" class="form-control" data-bind='value: intakeNewSize1' disabled="true"></input></td>
-                <td><input type="text" class="form-control" data-bind='value: intakeNewSize2' disabled="true"></input></td>
-                <td><input type="text" class="form-control" data-bind='value: intakeNewSize3' disabled="true"></input></td>
-                <td><input type="text" class="form-control" data-bind='value: intakeNewSize4' disabled="true"></input></td>
-                <td><input type="text" class="form-control" data-bind='value: intakeNewSize5' disabled="true"></input></td>
-                <td><input type="text" class="form-control" data-bind='value: intakeNewSize6' disabled="true"></input></td>
-                <td><input type="text" class="form-control" data-bind='value: intakeNewSize7' disabled="true"></input></td>
-                <td><input type="text" class="form-control" data-bind='value: intakeNewSize8' disabled="true"></input></td>
-              </tr>
-              <tr>
-                <th scope="row">New Tappet #</th>
+                <th scope="row">Nearest Tappet #</th>
                 <td><input type="text" class="form-control" data-bind='value: intakeNewTappet1' disabled="true"></input></td>
                 <td><input type="text" class="form-control" data-bind='value: intakeNewTappet2' disabled="true"></input></td>
                 <td><input type="text" class="form-control" data-bind='value: intakeNewTappet3' disabled="true"></input></td>
@@ -149,6 +149,17 @@
                 <td><input type="text" class="form-control" data-bind='value: intakeNewTappet6' disabled="true"></input></td>
                 <td><input type="text" class="form-control" data-bind='value: intakeNewTappet7' disabled="true"></input></td>
                 <td><input type="text" class="form-control" data-bind='value: intakeNewTappet8' disabled="true"></input></td>
+              </tr>
+              <tr>
+                <th scope="row">New Tappet Size</th>
+                <td><input type="text" class="form-control" data-bind='value: intakeNewSize1' disabled="true"></input></td>
+                <td><input type="text" class="form-control" data-bind='value: intakeNewSize2' disabled="true"></input></td>
+                <td><input type="text" class="form-control" data-bind='value: intakeNewSize3' disabled="true"></input></td>
+                <td><input type="text" class="form-control" data-bind='value: intakeNewSize4' disabled="true"></input></td>
+                <td><input type="text" class="form-control" data-bind='value: intakeNewSize5' disabled="true"></input></td>
+                <td><input type="text" class="form-control" data-bind='value: intakeNewSize6' disabled="true"></input></td>
+                <td><input type="text" class="form-control" data-bind='value: intakeNewSize7' disabled="true"></input></td>
+                <td><input type="text" class="form-control" data-bind='value: intakeNewSize8' disabled="true"></input></td>
               </tr>
               <tr>
                 <th scope="row">New Tappet Part#</th>
@@ -160,6 +171,17 @@
                 <td><input type="text" class="form-control" data-bind='value: intakeNewPart6' disabled="true"></input></td>
                 <td><input type="text" class="form-control" data-bind='value: intakeNewPart7' disabled="true"></input></td>
                 <td><input type="text" class="form-control" data-bind='value: intakeNewPart8' disabled="true"></input></td>
+              </tr>
+              <tr>
+                <th scope="row">New Clearance</th>
+                <td><input type="text" class="form-control" data-bind='value: intakeNewClearance1' disabled="true"></input></td>
+                <td><input type="text" class="form-control" data-bind='value: intakeNewClearance2' disabled="true"></input></td>
+                <td><input type="text" class="form-control" data-bind='value: intakeNewClearance3' disabled="true"></input></td>
+                <td><input type="text" class="form-control" data-bind='value: intakeNewClearance4' disabled="true"></input></td>
+                <td><input type="text" class="form-control" data-bind='value: intakeNewClearance5' disabled="true"></input></td>
+                <td><input type="text" class="form-control" data-bind='value: intakeNewClearance6' disabled="true"></input></td>
+                <td><input type="text" class="form-control" data-bind='value: intakeNewClearance7' disabled="true"></input></td>
+                <td><input type="text" class="form-control" data-bind='value: intakeNewClearance8' disabled="true"></input></td>
               </tr>
             </tbody>
           </table>
