--- a/index.html
+++ b/index.html
@@ -14,7 +14,21 @@
         <table class="table table-bordered table-sm">
             <thead>
               <tr>
-                <th scope="col">Exhaust Side</th>
+                <th scope="row">Target Clearance</th>
+                <td><input type="text" class="form-control" data-bind='value: exhaustTarget'></input></td>
+                <td>
+                  <div class="dropdown">
+                    <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" data-bind="text: exhaustRounding">Round Nearest</button>
+                    <ul class="dropdown-menu">
+                      <li><a class="dropdown-item" href="#" data-bind="click: exhaustRoundNearestClicked">Round Nearest</a></li>
+                      <li><a class="dropdown-item" href="#" data-bind="click: exhaustRoundUpClicked">Round Up</a></li>
+                      <li><a class="dropdown-item" href="#" data-bind="click: exhaustRoundDownClicked">Round Down</a></li>
+                    </ul>
+                  </div>
+                </td>
+              </tr>
+              <tr>
+                <th scope="col">Exhaust</th>
                 <th scope="col">1</th>
                 <th scope="col">2</th>
                 <th scope="col">3</th>
@@ -26,10 +40,6 @@
               </tr>
             </thead>
             <tbody>
-              <tr>
-                <th scope="row">Target Clearance</th>
-                <td colspan="8"><input type="text" class="form-control" data-bind='value: exhaustTarget'></input></td>
-              </tr>
               <tr>
                 <th scope="row">Measured Clearance</th>
                 <td><input type="text" class="form-control" data-bind='value: exhaustClearance1'></input></td>
@@ -101,7 +111,21 @@
           <table class="table table-bordered table-sm">
             <thead>
               <tr>
-                <th scope="col">Intake Side</th>
+                <th scope="row">Target Clearance</th>
+                <td><input type="text" class="form-control" data-bind='value: intakeTarget'></input></td>
+                <td>
+                  <div class="dropdown">
+                    <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" data-bind="text: intakeRounding">Round Nearest</button>
+                    <ul class="dropdown-menu">
+                      <li><a class="dropdown-item" href="#" data-bind="click: intakeRoundNearestClicked">Round Nearest</a></li>
+                      <li><a class="dropdown-item" href="#" data-bind="click: intakeRoundUpClicked">Round Up</a></li>
+                      <li><a class="dropdown-item" href="#" data-bind="click: intakeRoundDownClicked">Round Down</a></li>
+                    </ul>
+                  </div>
+                </td>
+              </tr>
+              <tr>
+                <th scope="col">Intake</th>
                 <th scope="col">1</th>
                 <th scope="col">2</th>
                 <th scope="col">3</th>
@@ -113,10 +137,6 @@
               </tr>
             </thead>
             <tbody>
-              <tr>
-                <th scope="row">Target Clearance</th>
-                <td colspan="8"><input type="text" class="form-control" data-bind='value: intakeTarget'></input></td>
-              </tr>
               <tr>
                 <th scope="row">Measured Clearance</th>
                 <td><input type="text" class="form-control" data-bind='value: intakeClearance1'></input></td>
