--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Duratec Tappet Calculator</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-        <script type="text/javascript" src="https://ajax.aspnetcdn.com/ajax/knockout/knockout-3.5.0.js"></script>
+        <script type="text/javascript" src="https://ajax.aspnetcdn.com/ajax/knockout/knockout-3.2.0.js"></script>
+        <script type="text/javascript" src="https://knockoutjs.com/examples/resources/knockout.simpleGrid.3.0.js"></script>
     </head>
     <body>
       <div class="p-5 text-center bg-light">
@@ -205,6 +206,22 @@
               </tr>
             </tbody>
           </table>
+          <div style="width: 50%;">
+          <table class="table table-bordered table-sm">
+            <thead>
+              <th>Ford Part #</th>
+              <th>Nominal Thickness</th>
+              <th>Tappet Number</th>
+            </thead>
+            <tbody data-bind="foreach: fullParts">
+            <tr>
+              <td data-bind="text: PartNumber"></td>
+              <td data-bind="text: Size"></td>
+              <td data-bind="text: Number"></td>
+            </tr>
+          </tbody>
+          </table>
+        </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
         <script type="text/javascript" src="calculator.js"></script>
     </body>
